--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,6 @@ Flask==0.12.2
 Flask-SocketIO==2.9.1
 gunicorn==19.7.1
 MarkupSafe==1.0
-Pillow==4.2.1
-opencv-python==3.2.0.7
 Werkzeug==0.12.2
 python-socketio==1.7.7
 python-engineio==3.12.1
@@ -13,4 +11,6 @@ itsdangerous==0.24
 gevent-websocket==0.10.1
 eventlet==0.25.2
 Flask-RESTful==0.3.8
-Pyrebase==3.0.27
+Flask-SQLAlchemy==2.4.3
+Flask-WTF==0.14.3
+WTForms==2.3.1
